# libde265

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.am  README.md  appveyor.yml  configure.ac  datasets  decoding.txt  libde265-notes.md  libde265.pc.in
.github/: FUNDING.yml
.github/workflows/: arm.yml  build.yml  coverity.yml  decode.yml  lint.yml  mingw.yml  osx.yml
dec265/: CMakeLists.txt  Makefile.am  curid.txt  dec265-ctypes.cc  dec265-main.cc  dec265-pybind11.cc  dec265.cc  decoding-123x235.txt  decoding.txt  getCTBinfo-ctypes.py  getCTBinfo-pybind11.py  imgSeqToH265.py  make-ctypes.sh  make-main.sh  make-pybind11.sh  metaInfo.txt  run.sh  sdl.cc  sdl.hh  test.h265  visualize-copy.cc
enc265/: CMakeLists.txt
extra/libde265/: de265-version.h
libde265/: CMakeLists.txt  Makefile.am  alloc_pool.h  bitstream.cc  bitstream.h  cabac.cc  cabac.h  check_version.sh  configparam.cc  contextmodel.cc  de265.cc  de265.h  deblock.cc  dec265-savefile.cc  decctx.cc  decctx.h  dpb.cc  dpb.h  en265.h  fallback-dct.h  image.cc  image.h  motion.cc  motion.h  nal-parser.cc  nal-parser.h  nal.h  refpic.cc  sao.cc  slice.cc  slice.h  sps.cc  sps.h  threads.cc  threads.h  transform.cc  visualize.cc  vps.cc  vps.h  vui.cc  (+1 more)
libde265/encoder/: encoder-types.cc  encpicbuf.cc
libde265/encoder/algo/: coding-options.cc  tb-intrapredmode.cc  tb-intrapredmode.h
libde265/x86/: CMakeLists.txt
scripts/: build-android-libs.sh  check_licenses.sh  ci-before-install-linux.sh  ci-before-install-osx.sh  ci-before-script.sh  ci-run.sh
sherlock265/: CMakeLists.txt  Makefile-for-py  VideoDecoder.cc  VideoDecoder.hh  VideoPlayer.cc  VideoPlayer.hh  getCTBinfo  getCTBinfo-debug.cc  getCTBinfo.cc  getCTBinfo.py  log.txt  make-debug.sh  make-so.sh  run-so.sh  run.sh  sherlock265.cc
tools/: rd-curves.cc
